@@ -2,6 +2,7 @@ cm4all-workshop (0.1.7) unstable; urgency=low
 
   * bugfix: added missing 'return' when the concurrency limit is reached
   * update the plan filter after a new job is started
+  * interrupt queue_run() when the plan filter has been changed
 
  --
 
